@@ -2,10 +2,10 @@ package com.uade.tpo.courseCommerce.service;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Objects;
 import java.util.Optional;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.security.config.annotation.web.oauth2.resourceserver.OAuth2ResourceServerSecurityMarker;
 import org.springframework.stereotype.Service;
 
 import com.uade.tpo.courseCommerce.entity.Cart;
@@ -17,8 +17,6 @@ import com.uade.tpo.courseCommerce.repository.UserRepository;
 @Service
 public class CartServiceImpl implements CartService {
 
-    @Autowired
-    private UserRepository userRepository;
 
     @Autowired
     private CartRepository cartRepository;
@@ -28,6 +26,9 @@ public class CartServiceImpl implements CartService {
 
     @Autowired
     private AuthenticationService authService;
+
+    @Autowired
+    private UserRepository userRepository;
 
     
     @Override
@@ -49,19 +50,21 @@ public class CartServiceImpl implements CartService {
     @Override
     public Cart addToCart(String username, String course) {
     
-        List<Course> foundedCourse = courseService.findByDescripcion(course);
-        
+        List<Course> foundCourse = courseService.findByDescripcion(course);
         Optional<User> user = authService.getUserByUsername(username);
-        
+
         User cartUser = user.get();
         Long userID = cartUser.getId();
-
-        System.out.println(cartUser);
-        System.out.println(userID);
         
-        Optional<Cart> cart = getByUserID(userID); //EN ESTA LINEA ESTA EL ERROR
+        List<Course> userCourses = cartUser.getCourses();
+        for(Course userCourse : userCourses){
 
-        System.out.print("Encontro el carrito del usuario");
+            // Busco que el curso no haya sido adquirido ya por el usuario
+            if (Objects.equals(userCourse.getDescription(), course)) return null;
+
+        }
+
+        Optional<Cart> cart = getByUserID(userID);
 
         Cart newCart;
         if (cart.isEmpty()) {
@@ -69,9 +72,11 @@ public class CartServiceImpl implements CartService {
         } else {
             newCart = cart.get();
         }
+
+
         List<Course> courses = newCart.getCourses();
-        if(!courses.contains(foundedCourse.getFirst())){
-            courses.add(foundedCourse.get(0));
+        if(!courses.contains(foundCourse.getFirst())){
+            courses.add(foundCourse.get(0));
             newCart.setCourses(courses);
             cartRepository.save(newCart);
             return newCart;
@@ -80,12 +85,12 @@ public class CartServiceImpl implements CartService {
 
     }
 
+    @Override
     public Cart deleteFromCart(Long courseId, Long userId){
         Optional<Cart> userCart = getByUserID(userId);
         Cart newCart = new Cart();
         if(userCart.isPresent()){
             newCart = userCart.get();
-            System.out.println(1);
         } else {
             return newCart;
         }
@@ -94,31 +99,26 @@ public class CartServiceImpl implements CartService {
         System.out.println(2);
         if(course.isPresent()){
             foundCourse = course.get();
-            System.out.println(3);
         } else {
             return newCart;
         }
 
 
         List<Course> cartCourses = newCart.getCourses();
-        System.out.println(4);
         if(cartCourses.contains(foundCourse)){
             cartCourses.remove(foundCourse);
             newCart.setCourses(cartCourses);
             cartRepository.save(newCart);
-            System.out.println(4);
             return newCart;
         } else {
             return newCart;
         }
     }
 
-
-
     @Override
     public Cart clearCart(Long userId){
         Optional<Cart> cart = cartRepository.findByUserId(userId);
-        List<Course> courses = new ArrayList<Course>();
+        List<Course> courses = new ArrayList<>();
         Cart userCart = new Cart(); 
         if(cart.isPresent()){
             userCart = cart.get();
@@ -130,56 +130,44 @@ public class CartServiceImpl implements CartService {
         return userCart;
     }
 
-
-    public Cart deleteFromCart(Long courseId, Long userId){
-        Optional<Cart> userCart = getByUserID(userId);
-        Cart newCart = new Cart();
-        if(userCart.isPresent()){
-            newCart = userCart.get();
-            System.out.print(1);
-        } else {
-            return newCart;
-        }
-        Optional<Course> course = courseService.findById(userId);
-        Course foundCourse;
-        System.out.print(2);
-        if(course.isPresent()){
-            foundCourse = course.get();
-            System.out.print(3);
-        } else {
-            return newCart;
-        }
-
-
-        List<Course> cartCourses = newCart.getCourses();
-        System.out.print(4);
-        if(cartCourses.contains(foundCourse)){
-            cartCourses.remove(foundCourse);
-            newCart.setCourses(cartCourses);
-            cartRepository.save(newCart);
-            System.out.print(4);
-            return newCart;
-        } else {
-            return newCart;
-        }
-    }
-
-
-
     @Override
-    public Cart clearCart(Long userId){
+    public Cart confirmCart(Long userId) {
+
         Optional<Cart> cart = cartRepository.findByUserId(userId);
-        List<Course> courses = new ArrayList<Course>();
-        Cart userCart = new Cart(); 
+        Optional<User> user = userRepository.findById(userId);
+
+        if (!user.isPresent()) return null;
+        User confirmedUser = user.get();
+
         if(cart.isPresent()){
-            userCart = cart.get();
-            userCart.setCourses(courses);
 
-        }
+            List<Course> cartCourses = cart.get().getCourses();
 
-        cartRepository.save(userCart);
-        return userCart;
+            for (Course cartCourse : cartCourses) {
+                
+                Course course = courseService.discountStock(cartCourse.getDescription());
+
+                // Ocurrió un error al descontar stock
+                if (Objects.isNull(course)) return null;
+
+
+                List<Course> userCourses = confirmedUser.getCourses();
+                userCourses.add(course);
+                confirmedUser.setCourses(userCourses);
+                userRepository.save(confirmedUser);
+
+
+            }
+
+            clearCart(userId);
+
+        } else {
+            return null;
+        } 
+
+        return cart.get();
     }
+    
     
 
 }
